Adiciona configuração do Supabase, remove estilos não utilizados e atualiza o layout da aplicação

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ SUPABASE_SERVICE_ROLE_KEY=SEU_SERVICE_ROLE_KEY_AQUI
 
 # Configuração do Banco de Dados PostgreSQL local (caso necessário)
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
+DATABASE_URL="postgresql://usuario:senha@localhost:5432/nome_do_banco"
+
