--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "backlog-dim",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "supabase:start": "npx supabase start",
+    "supabase:stop": "npx supabase stop",
+    "supabase:reset": "npx supabase stop && npx supabase start",
+    "supabase:clean": "docker ps --filter \"name=supabase\" -aq | ForEach-Object { docker stop $_; docker rm $_ } && docker network prune -f",
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:push": "npx prisma db push",
+    "prisma:seed": "npx prisma db seed",
+    "prisma:reset": "npx prisma migrate reset --force",
+    "prisma:studio": "npx prisma studio",
+    "db:reset": "npm run supabase:stop && npm run prisma:reset && npm run supabase:start && npm run prisma:seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,6 +29,7 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/x-data-grid": "^7.26.0",
+    "@prisma/client": "^6.3.1",
     "@supabase/supabase-js": "^2.48.1",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
@@ -25,7 +40,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.19",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,9 +50,11 @@
     "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
     "prettier": "^3.5.1",
+    "prisma": "^6.3.1",
     "purgecss": "^7.0.2",
     "supabase": "^2.12.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
