--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,7 @@
-version: "3.6"
+version: '3.6'
 services:
   db:
     ports:
-      - "5433:5432"
+      - '5433:5432'
+    environment:
+      POSTGRES_HOST: '0.0.0.0'
