--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ SUPABASE_SERVICE_ROLE_KEY=SEU_SERVICE_ROLE_KEY_AQUI
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 DATABASE_URL="postgresql://usuario:senha@localhost:5432/nome_do_banco"
 
+# Configuração do Azure AD (caso necessário)
+AZURE_AD_CLIENT_ID=ba8c18a6-1ce5-44b9-ba6d-afd23581aad5
+AZURE_AD_CLIENT_SECRET=dOG8Q~4qBhJs_Hf0q1kXVK7hXJIclkD~6Ga6tbcd
+AZURE_AD_TENANT_ID=5aba04a1-f863-4b56-817d-44291c90d1b8
