--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
+    "@auth/nextjs": "^0.0.0-380f8d56",
+    "@azure/msal-node": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@govbr-ds/core": "^3.6.1",
@@ -34,6 +37,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
