Adicionar novas páginas de gerenciamento no DashboardAdmin e remover páginas antigas; atualizar configuração do ambiente

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # 🚀 Exemplo de Configuração do Supabase para Desenvolvimento Local
 
+
+NEXTAUTH_SECRET=w2KJkCOjfWp50T7S/Y8nsGPXbyDWhQBTV4mty5y8p30=
+NEXTAUTH_URL=http://localhost:3000
+
 # URL do Supabase (local)
 NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
 
