Adicionar configuração de caminhos no TypeScript, refatorar lógica de logout e atualizar gerenciamento de processos; remover páginas obsoletas e integrar autenticação com Azure AD

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       }
     ],
     "paths": {
+      "@/config/*": ["./src/config/*"],
       "@/*": ["./src/*"]
     },
     "typeRoots": ["./node_modules/@types", "./next-auth.d.ts"]
