Atualizar configurações do Prettier, atualizar dependências e remover log de conexão com o Supabase

--- a/package.json
+++ b/package.json
@@ -24,42 +24,43 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/core": "^0.37.4",
+    "@auth/core": "^0.38.0",
     "@auth/nextjs": "^0.0.0-380f8d56",
     "@azure/msal-node": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@govbr-ds/core": "^3.6.1",
-    "@mui/icons-material": "^6.4.4",
-    "@mui/material": "^6.4.4",
-    "@mui/x-data-grid": "^7.26.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@mui/x-data-grid": "^7.27.2",
     "@prisma/client": "^6.4.1",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.49.1",
     "multer": "^1.4.5-lts.1",
-    "next": "15.1.7",
+    "next": "15.2.1",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.85.0"
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20.17.19",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.13.9",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "15.1.7",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.1",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.3",
     "prisma": "^6.4.1",
     "purgecss": "^7.0.2",
-    "supabase": "^2.12.1",
-    "tailwindcss": "^3.4.1",
+    "supabase": "^2.15.8",
+    "tailwindcss": "^4.0.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
