--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "useTabs": false,
+  "tabWidth": 2,
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
+  "printWidth": 90,
+  "endOfLine": "lf",
+  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
   "trailingComma": "none"
 }
