--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.2.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "lint-staged": "^15.4.3",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prisma": "^6.4.1",
     "purgecss": "^7.0.2",
