--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 20
 
       - name: 📦 Instalar Dependências
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: 🧹 Rodar ESLint e Prettier
         run: npm run lint && npm run format
