--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,16 @@ jobs:
     name: 🛠️ Lint, Build e Testes
     runs-on: ubuntu-latest
 
+    env:
+      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+      SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      NEXTAUTH_URL: "http://localhost:3000"
+      AZURE_AD_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+      AZURE_AD_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+      AZURE_AD_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+
     steps:
       - name: 📥 Checkout do Código
         uses: actions/checkout@v4
@@ -21,14 +31,31 @@ jobs:
         with:
           node-version: 20
 
+      - name: 🔧 Criar Arquivo .env
+        run: |
+          echo "NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}" >> .env
+          echo "SUPABASE_DB_URL=${SUPABASE_DB_URL}" >> .env
+          echo "DATABASE_URL=${DATABASE_URL}" >> .env
+          echo "NEXTAUTH_SECRET=${NEXTAUTH_SECRET}" >> .env
+          echo "NEXTAUTH_URL=${NEXTAUTH_URL}" >> .env
+          echo "AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID}" >> .env
+          echo "AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET}" >> .env
+          echo "AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID}" >> .env
+
       - name: 📦 Instalar Dependências
         run: npm install --legacy-peer-deps
 
       - name: 🧹 Rodar ESLint e Prettier
         run: npm run lint && npm run format
 
+      - name: 🔍 Debug Variáveis de Ambiente
+        run: |
+          echo "🔹 NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}"
+          echo "🔹 DATABASE_URL=${DATABASE_URL}"
+
       - name: 🔨 Construir o Projeto
         run: npm run build
 
-#      - name: ✅ Executar Testes Automatizados
-#        run: npm test
+      # Descomente esta parte quando os testes automatizados forem implementados
+      # - name: ✅ Executar Testes Automatizados
+      #   run: npm test
