--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
           echo "AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID}" >> .env
           echo "AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET}" >> .env
           echo "AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID}" >> .env
+          echo "🔹 NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}"
+          echo "🔹 DATABASE_URL=${DATABASE_URL}"
+          echo "🔹 NEXTAUTH_URL=${NEXTAUTH_URL}"
 
       - name: 📦 Instalar Dependências
         run: npm install --legacy-peer-deps
