Alterar branch de pull request para incluir 'stable' no workflow de CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: CI - Validação do Código
 on:
   pull_request:
     branches:
-      - main
-#      - stable
+#      - main
+      - stable
 #      - develop
 
 jobs:
