--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@prisma/client": "^6.4.1",
     "@supabase/supabase-js": "^2.49.1",
     "multer": "^1.4.5-lts.1",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
@@ -62,7 +62,9 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
