Atualizar configurações do Prettier, corrigir formatação em arquivos e adicionar vírgulas finais em várias declarações

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,5 @@
   "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "trailingComma": "none"
+  "trailingComma": "es5"
 }
