--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.85.1"
+    "react-input-mask": "^2.0.4",
+    "react-text-mask": "^5.5.0",
+    "sass": "^1.85.1",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -62,6 +65,9 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-input-mask": "^3.0.6",
+    "@types/react-text-mask": "^5.4.14",
+    "@types/text-mask-addons": "^3.8.4",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.22.0",
