--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "devs": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,8 +37,6 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/core": "^0.38.0",
-    "@auth/nextjs": "^0.0.0-380f8d56",
     "@azure/msal-node": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -45,7 +44,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-data-grid": "^7.27.2",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "@supabase/supabase-js": "^2.49.1",
     "multer": "^1.4.5-lts.1",
     "next": "^15.2.1",
@@ -54,7 +53,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-input-mask": "^2.0.4",
-    "react-text-mask": "^5.5.0",
     "sass": "^1.85.1",
     "text-mask-addons": "^3.8.0"
   },
@@ -77,7 +75,7 @@
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prisma": "^6.4.1",
+    "prisma": "^6.5.0",
     "purgecss": "^7.0.2",
     "supabase": "^2.15.8",
     "ts-node": "^10.9.2",
