--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "npm run buil-routes && next dev --turbopack",
     "devs": "node server.js",
     "build": "next build",
     "start": "next start",
@@ -50,13 +50,14 @@
     "@supabase/supabase-js": "^2.49.1",
     "multer": "^1.4.5-lts.1",
     "next": "^15.2.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-input-mask": "^2.0.4",
     "sass": "^1.85.1",
-    "text-mask-addons": "^3.8.0"
+    "text-mask-addons": "^3.8.0",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
