--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-input-mask": "^2.0.4",
     "sass": "^1.85.1",
     "text-mask-addons": "^3.8.0",
