test: bump automatico2

--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "npm run build-routes && next dev --turbopack",
-    "devs": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
-    "pre-commit": "lint-staged",
-    "lint-staged": "lint-staged",
-    "supabase:start": "npx supabase start",
-    "supabase:stop": "npx supabase stop",
-    "supabase:reset": "npx supabase stop && npx supabase start",
-    "supabase:clean": "docker ps --filter \"name=supabase\" -aq | ForEach-Object { docker stop $_; docker rm $_ } && docker network prune -f",
-    "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:push": "npx prisma db push",
-    "prisma:seed": "npx prisma db seed",
-    "prisma:reset": "npx prisma migrate reset --force",
-    "prisma:studio": "npx prisma studio",
+    "build-routes": "tsx scripts/generateDevRoutes.ts",
     "db:reset": "npx prisma migrate reset --force",
     "db:seed": "npx tsx prisma/seed.ts",
-    "build-routes": "tsx scripts/generateDevRoutes.ts",
-    "prebuild": "npm run build-routes"
+    "dev": "npm run build-routes && next dev --turbopack",
+    "devs": "node server.js",
+    "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
+    "lint": "next lint",
+    "lint-staged": "lint-staged",
+    "postinstall": "husky install",
+    "prebuild": "npm run build-routes",
+    "pre-commit": "lint-staged",
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:push": "npx prisma db push",
+    "prisma:reset": "npx prisma migrate reset --force",
+    "prisma:seed": "npx prisma db seed",
+    "prisma:studio": "npx prisma studio",
+    "start": "next start",
+    "supabase:clean": "docker ps --filter \"name=supabase\" -aq | ForEach-Object { docker stop $_; docker rm $_ } && docker network prune -f",
+    "supabase:reset": "npx supabase stop && npx supabase start",
+    "supabase:start": "npx supabase start",
+    "supabase:stop": "npx supabase stop"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
