--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "private": true,
   "type": "module",
   "scripts": {
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.54.2",
     "react-input-mask": "^2.0.4",
     "sass": "^1.85.1",
+    "swr": "^2.3.3",
     "text-mask-addons": "^3.8.0",
     "tsx": "^4.19.3"
   },
