--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.26",
+  "version": "0.1.29",
   "private": true,
   "type": "module",
   "scripts": {
@@ -58,6 +58,7 @@
     "@mui/x-data-grid": "^7.28.0",
     "@prisma/client": "^6.5.0",
     "@supabase/supabase-js": "^2.49.1",
+    "dayjs": "^1.11.13",
     "multer": "^1.4.5-lts.1",
     "next": "^15.2.1",
     "next-auth": "^4.24.7",
