--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.31",
+  "version": "0.1.32",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "build-routes": "tsx scripts/generateDevRoutes.ts",
     "db:reset": "npx prisma migrate reset --force",
     "db:seed": "npx tsx prisma/seed.ts",
