--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
         "name": "next"
       }
     ],
+
     "paths": {
       "@/config/*": ["./src/config/*"],
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@anpd/shared-types": ["./node_modules/@anpd/shared-types"]
     },
     "typeRoots": ["./node_modules/@types", "./next-auth.d.ts"]
   },
