feat: implement useControladores hook and update RequeridoDropdownSection to use it feat: add controladores API route for fetching data feat: update .env.example with new API URL configuration

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ DATABASE_URL="postgresql://usuario:senha@localhost:5432/nome_do_banco"
 AZURE_AD_CLIENT_ID=ba8c18a6-1ce5-44b9-ba6d-afd23581aad5
 AZURE_AD_CLIENT_SECRET=dOG8Q~4qBhJs_Hf0q1kXVK7hXJIclkD~6Ga6tbcd
 AZURE_AD_TENANT_ID=5aba04a1-f863-4b56-817d-44291c90d1b8
+
+
+# Microsserviços 
+NEXT_PUBLIC_CONTROLADORES_API_URL=http://hml-dim.anpd.gov.br:3001
