Refactor RequeridoForm and introduce RequeridoModalForm component
- Refactored RequeridoForm to use react-hook-form for better form management.
- Introduced RequeridoModalForm component to encapsulate modal logic for creating/editing Requerido.
- Updated FormDropdown and related components to improve usability and maintainability.
- Added SetorDropdownSection for sector selection with improved data fetching.
- Enhanced error handling and validation in form submission.
- Cleaned up unused imports and improved type imports across various files.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.54",
+  "version": "0.1.55",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "dev": "npm run build-routes && next dev --turbopack",
     "devs": "node server.js",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
-    "lint": "next lint",
+    "lint": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint-staged": "lint-staged",
     "version:env": "node scripts/set-version-env.cjs",
     "prebuild": "npm run version:env && npm run build-routes",
@@ -49,25 +49,25 @@
   },
   "dependencies": {
     "@anpd/shared-types": "github:anpdgovbr/shared-types",
-    "@azure/msal-node": "^3.2.3",
+    "@azure/msal-node": "^3.5.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@govbr-ds/core": "^3.6.1",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
-    "@mui/x-data-grid": "^7.28.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@mui/x-data-grid": "^8.0.0",
     "@prisma/client": "^6.6.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/supabase-js": "^2.49.4",
     "dayjs": "^1.11.13",
-    "multer": "^1.4.5-lts.1",
-    "next": "^15.2.1",
-    "next-auth": "^4.24.7",
+    "multer": "^1.4.5-lts.2",
+    "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "papaparse": "^5.5.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
     "react-input-mask": "^2.0.4",
-    "sass": "^1.85.1",
+    "sass": "^1.87.0",
     "swr": "^2.3.3",
     "text-mask-addons": "^3.8.0",
     "tsx": "^4.19.3"
@@ -75,27 +75,27 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.14.1",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-input-mask": "^3.0.6",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "^15.2.1",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-prettier": "^5.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "^15.3.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^15.5.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "purgecss": "^7.0.2",
-    "supabase": "^2.15.8",
+    "supabase": "^2.22.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
