--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.75",
+  "version": "0.1.76",
   "private": true,
   "type": "module",
   "scripts": {
@@ -62,6 +62,7 @@
     "multer": "^1.4.5-lts.2",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "papaparse": "^5.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -77,6 +78,7 @@
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.14.1",
+    "@types/node-fetch": "^2.6.12",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
