--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.78",
+  "version": "0.1.79",
   "private": true,
   "type": "module",
   "scripts": {
@@ -68,6 +68,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-input-mask": "^2.0.4",
+    "recharts": "^2.15.3",
     "remask": "^1.2.2",
     "sass": "^1.87.0",
     "swr": "^2.3.3",
