--- a/package.json
+++ b/package.json
@@ -49,56 +49,56 @@
   },
   "dependencies": {
     "@anpd/shared-types": "github:anpdgovbr/shared-types",
-    "@azure/msal-node": "^3.5.1",
+    "@azure/msal-node": "^3.6.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@govbr-ds/core": "^3.6.1",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
-    "@mui/x-data-grid": "^8.0.0",
+    "@govbr-ds/core": "^3.6.2",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.1",
     "@prisma/client": "^6.9.0",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.50.0",
     "dayjs": "^1.11.13",
-    "multer": "^1.4.5-lts.2",
-    "next": "^15.3.1",
+    "multer": "^2.0.1",
+    "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
-    "papaparse": "^5.5.2",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.1",
+    "react-hook-form": "^7.57.0",
     "react-input-mask": "^2.0.4",
     "recharts": "^2.15.3",
     "remask": "^1.2.2",
-    "sass": "^1.87.0",
+    "sass": "^1.89.1",
     "swr": "^2.3.3",
     "text-mask-addons": "^3.8.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.30",
     "@types/node-fetch": "^2.6.12",
-    "@types/papaparse": "^5.3.15",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-input-mask": "^3.0.6",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "eslint": "^9.25.1",
-    "eslint-config-next": "^15.3.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.1",
-    "postcss": "^8.5.3",
+    "lint-staged": "^16.1.0",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
     "purgecss": "^7.0.2",
-    "supabase": "^2.22.4",
+    "supabase": "^2.24.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
