--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.84",
+  "version": "0.1.85",
   "private": true,
   "type": "module",
   "scripts": {
@@ -15,6 +15,7 @@
     "lint-staged": "lint-staged",
     "version:env": "node scripts/set-version-env.cjs",
     "prebuild": "npm run version:env && npm run build-routes",
+    "prepare": "husky install",
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
