feat: enhance error handling and state management in dashboard cards

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ AZURE_AD_TENANT_ID=5aba04a1-f863-4b56-817d-44291c90d1b8
 
 # Microsserviços 
 NEXT_PUBLIC_CONTROLADORES_API_URL=http://hml-dim.anpd.gov.br:3001
+CONTROLADORES_API_URL=http://hml-dim.anpd.gov.br:3001
