--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.90",
+  "version": "0.1.91",
   "private": true,
   "type": "module",
   "scripts": {
@@ -74,7 +74,8 @@
     "sass": "^1.89.2",
     "swr": "^2.3.3",
     "text-mask-addons": "^3.8.0",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -87,6 +88,7 @@
     "@types/react-input-mask": "^3.0.6",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
+    "@types/yup": "^0.29.14",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^9.29.0",
