--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.91",
+  "version": "0.1.92",
   "private": true,
   "type": "module",
   "scripts": {
@@ -60,6 +60,7 @@
     "@prisma/client": "^6.9.0",
     "@supabase/supabase-js": "^2.50.0",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "multer": "^2.0.1",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
@@ -80,6 +81,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^24.0.1",
     "@types/node-fetch": "^2.6.12",
     "@types/papaparse": "^5.3.16",
