--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backlog-dim",
-  "version": "0.1.115",
+  "version": "0.1.116",
   "private": true,
   "type": "module",
   "scripts": {
@@ -49,29 +49,29 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@anpd/shared-types": "github:anpdgovbr/shared-types",
-    "@azure/msal-node": "^3.6.0",
+    "@anpd/shared-types": "^0.1.2",
+    "@azure/msal-node": "^3.6.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.1.1",
-    "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
-    "@mui/x-data-grid": "^8.5.2",
-    "@prisma/client": "^6.9.0",
-    "@supabase/supabase-js": "^2.50.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
+    "@mui/x-data-grid": "^8.5.3",
+    "@prisma/client": "^6.10.1",
+    "@supabase/supabase-js": "^2.50.2",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "multer": "^2.0.1",
-    "next": "^15.3.3",
+    "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.58.1",
     "react-input-mask": "^2.0.4",
-    "recharts": "^2.15.3",
+    "recharts": "^3.0.0",
     "remask": "^1.2.2",
     "sass": "^1.89.2",
     "swr": "^2.3.3",
@@ -82,8 +82,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/lodash": "^4.17.18",
-    "@types/node": "^24.0.1",
+    "@types/lodash": "^4.17.19",
+    "@types/node": "^24.0.4",
     "@types/node-fetch": "^2.6.12",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
@@ -91,18 +91,18 @@
     "@types/react-input-mask": "^3.0.6",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
-    "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
+    "@types/yup": "^0.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint-config-next": "^15.3.4",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
-    "postcss": "^8.5.5",
-    "prettier": "^3.5.3",
-    "prisma": "^6.9.0",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.1",
+    "prisma": "^6.10.1",
     "purgecss": "^7.0.2",
     "supabase": "^2.26.9",
     "ts-node": "^10.9.2",
