feat: Implement ESLint configuration and migration scripts for MUI imports
- Added ESLint configuration in `eslint.config.mjs` to enforce specific import paths for MUI components, improving bundle size and performance.
- Created migration script `fix-mui-imports.mjs` to automatically convert top-level MUI imports to specific imports.
- Introduced `generate-version.cjs` script for automatic versioning and generation of `version.json`.
- Updated Husky hooks to modern syntax and improved pre-commit checks.
- Removed obsolete dependencies and configurations, streamlining the project setup.
- Enhanced TypeScript configuration for better performance and compatibility.
- Updated package.json to reflect new scripts and dependencies, including version bump to 0.2.0.
- Added documentation for ESLint setup, versioning system, and modernization changes.

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "singleQuote": false,
   "printWidth": 90,
   "endOfLine": "lf",
-  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrder": ["^react$", "^next", "^@mui", "^@anpd", "^@govbr", "^@/", "^\\.\\.?/"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "trailingComma": "es5"
