--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backlog-dim",
-  "version": "0.1.123",
+  "name": "@anpdgovbr/backlog-dim",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,12 +10,15 @@
     "db:seed": "npx tsx prisma/seed.ts",
     "dev": "npm run build-routes && next dev --turbopack",
     "devs": "node server.js",
+    "fix:mui-imports": "node scripts/fix-mui-imports.mjs",
+    "fix:mui-imports:dry": "node scripts/fix-mui-imports.mjs --dry-run",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
+    "generate:version": "node scripts/generate-version.cjs",
     "lint": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint-staged": "lint-staged",
     "version:env": "node scripts/set-version-env.cjs",
-    "prebuild": "npm run version:env && npm run build-routes",
-    "prepare": "husky install",
+    "prebuild": "npm run version:env && npm run generate:version && npm run build-routes",
+    "prepare": "husky",
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
@@ -26,15 +29,12 @@
     "supabase:clean": "docker ps --filter \"name=supabase\" -aq | ForEach-Object { docker stop $_; docker rm $_ } && docker network prune -f",
     "supabase:reset": "npx supabase stop && npx supabase start",
     "supabase:start": "npx supabase start",
-    "supabase:stop": "npx supabase stop"
+    "supabase:stop": "npx supabase stop",
+    "type-check": "tsc --noEmit"
   },
-  "eslintConfig": {
-    "extends": "next/core-web-vitals",
-    "settings": {
-      "next": {
-        "rootDir": "src"
-      }
-    }
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -49,27 +49,27 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@anpd/shared-types": "^0.1.3",
-    "@azure/msal-node": "^3.6.3",
+    "@anpdgovbr/shared-types": "^0.1.4-beta",
+    "@azure/msal-node": "^3.6.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
-    "@hookform/resolvers": "^5.1.1",
+    "@hookform/resolvers": "^5.2.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "@mui/x-data-grid": "^8.8.0",
-    "@prisma/client": "^6.11.1",
-    "@supabase/supabase-js": "^2.50.5",
+    "@mui/x-data-grid": "^8.9.1",
+    "@prisma/client": "^6.12.0",
+    "@supabase/supabase-js": "^2.52.1",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
-    "multer": "^2.0.1",
-    "next": "^15.3.5",
+    "multer": "^2.0.2",
+    "next": "^15.4.4",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.61.1",
     "react-input-mask": "^2.0.4",
     "recharts": "^3.1.0",
     "remask": "^1.2.2",
@@ -80,10 +80,9 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.0.13",
+    "@types/node": "^24.1.0",
     "@types/node-fetch": "^2.6.12",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
@@ -91,20 +90,19 @@
     "@types/react-input-mask": "^3.0.6",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
-    "@types/yup": "^0.32.0",
-    "@typescript-eslint/eslint-plugin": "^8.36.0",
-    "@typescript-eslint/parser": "^8.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.31.0",
-    "eslint-config-next": "^15.3.5",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-config-next": "^15.4.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prisma": "^6.11.1",
+    "prisma": "^6.12.0",
     "purgecss": "^7.0.2",
-    "supabase": "^2.30.4",
+    "supabase": "^2.31.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
