--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npx prisma generate && next build",
+    "build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=1 npx prisma generate && next build",
     "build-routes": "tsx scripts/generateDevRoutes.ts",
     "bump": "node scripts/bump-version.cjs",
     "bump:patch": "node scripts/bump-version-advanced.cjs patch",
@@ -13,7 +13,8 @@
     "db:reset": "npx prisma migrate reset --force",
     "db:seed": "npx tsx prisma/seed.ts",
     "dev": "npm run build-routes && next dev --turbopack",
-    "devs": "node server.js",
+    "dev:https": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
+    "devs": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
     "fix:mui-imports": "node scripts/fix-mui-imports.mjs",
     "fix:mui-imports:dry": "node scripts/fix-mui-imports.mjs --dry-run",
     "fix:mui-imports:advanced": "node scripts/fix-mui-imports-advanced.mjs",
@@ -100,6 +101,7 @@
     "@types/text-mask-addons": "^3.8.4",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.4.4",
     "eslint-config-prettier": "^10.1.8",
