feat: update .gitignore and package.json for infrastructure management scripts

--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "dev": "npm run build-routes && next dev --turbopack",
     "dev:https": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
     "devs": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
-    "fix:mui-imports": "node scripts/fix-mui-imports.mjs",
-    "fix:mui-imports:dry": "node scripts/fix-mui-imports.mjs --dry-run",
-    "fix:mui-imports:advanced": "node scripts/fix-mui-imports-advanced.mjs",
-    "fix:mui-imports:advanced:dry": "node scripts/fix-mui-imports-advanced.mjs --dry-run",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
     "generate:version": "node scripts/generate-version.cjs",
     "lint": "npx eslint \"**/*.{ts,tsx}\" --fix",
@@ -34,13 +30,27 @@
     "prisma:studio": "npx prisma studio",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "infra:setup": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-infra.sh | bash",
-    "infra:up": "cd infra-db && docker-compose up -d",
-    "infra:down": "cd infra-db && docker-compose down",
-    "infra:logs": "cd infra-db && docker-compose logs -f postgres",
-    "infra:reset": "cd infra-db && docker-compose down -v && docker-compose up -d",
-    "db:setup": "npm run infra:up && sleep 5 && npm run prisma:migrate && npm run prisma:seed",
-    "db:fresh": "npm run infra:reset && sleep 10 && npm run db:setup"
+    "fix:mui-imports": "node scripts/fix-mui-imports.mjs",
+    "fix:mui-imports:dry": "node scripts/fix-mui-imports.mjs --dry-run",
+    "fix:mui-imports:advanced": "node scripts/fix-mui-imports-advanced.mjs",
+    "fix:mui-imports:advanced:dry": "node scripts/fix-mui-imports-advanced.mjs --dry-run",
+    "infra:setup": "mkdir -p .infra 2>/dev/null || mkdir .infra 2>nul && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.cjs > .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.cjs > .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.cjs > .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs",
+    "infra:setup:manual": "node .infra/setup-cross-platform.cjs --manual",
+    "infra:setup:force": "node .infra/setup-cross-platform.cjs --force --auto",
+    "infra:up": "node .infra/docker-helper.cjs up",
+    "infra:down": "node .infra/docker-helper.cjs down",
+    "infra:logs": "node .infra/docker-helper.cjs logs",
+    "infra:reset": "node .infra/docker-helper.cjs reset",
+    "infra:clean": "node .infra/docker-helper.cjs clean",
+    "infra:psql": "node .infra/docker-helper.cjs psql",
+    "infra:status": "node .infra/docker-helper.cjs status",
+    "infra:backup": "node .infra/docker-helper.cjs backup",
+    "infra:db:init": "node .infra/db-helper.cjs setup",
+    "infra:db:fresh": "node .infra/db-helper.cjs fresh",
+    "infra:db:migrate": "node .infra/db-helper.cjs migrate",
+    "infra:db:seed": "node .infra/db-helper.cjs seed",
+    "infra:db:studio": "node .infra/db-helper.cjs studio",
+    "infra:db:reset": "node .infra/db-helper.cjs reset"
   },
   "engines": {
     "node": ">=20.0.0",
