feat: add verbose logging to route generation scriptrefactor: update import paths for helper functions in API routeschore: remove quick-fixes script due to redundancyfeat: implement new dashboard cards for Importar, Metadados, Processos, Requeridos, Responsáveis, and Statsfix: adjust CSS styles and remove unused style.scss filefeat: add auditing helper functions for logging actions in the databaserefactor: reorganize helper functions for better structure and claritychore: clean up style.css by removing unnecessary comments

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=1 npx prisma generate && next build",
     "build-routes": "tsx scripts/generateDevRoutes.ts",
+    "build-routes:verbose": "tsx scripts/generateDevRoutes.ts --verbose",
     "bump": "node scripts/bump-version.cjs",
     "bump:patch": "node scripts/bump-version-advanced.cjs patch",
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
-    "db:reset": "npx prisma migrate reset --force",
     "db:seed": "npx tsx prisma/seed.ts",
     "dev": "npm run build-routes && next dev --turbopack",
     "dev:https": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
@@ -25,8 +25,6 @@
     "pre-commit": "lint-staged",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
-    "prisma:reset": "npx prisma migrate reset --force",
-    "prisma:seed": "npx prisma db seed",
     "prisma:studio": "npx prisma studio",
     "start": "next start",
     "type-check": "tsc --noEmit",
@@ -35,8 +33,8 @@
     "fix:mui-imports:advanced": "node scripts/fix-mui-imports-advanced.mjs",
     "fix:mui-imports:advanced:dry": "node scripts/fix-mui-imports-advanced.mjs --dry-run",
     "infra:setup": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs",
-    "infra:setup:manual": "node .infra/setup-cross-platform.cjs --manual",
-    "infra:setup:force": "node .infra/setup-cross-platform.cjs --force --auto",
+    "infra:setup:manual": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --manual",
+    "infra:setup:force": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --force --auto",
     "infra:up": "node .infra/docker-helper.cjs up",
     "infra:down": "node .infra/docker-helper.cjs down",
     "infra:logs": "node .infra/docker-helper.cjs logs",
@@ -50,7 +48,10 @@
     "infra:db:migrate": "node .infra/db-helper.cjs migrate",
     "infra:db:seed": "node .infra/db-helper.cjs seed",
     "infra:db:studio": "node .infra/db-helper.cjs studio",
-    "infra:db:reset": "node .infra/db-helper.cjs reset"
+    "infra:db:reset": "node .infra/db-helper.cjs reset",
+    "infra:update": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/update-scripts.js -o .infra/update-scripts.cjs && node .infra/update-scripts.cjs",
+    "infra:debug": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/diagnostic.js -o .infra/diagnostic.cjs && node .infra/diagnostic.cjs",
+    "infra:fix": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/fix-credentials.js -o .infra/fix-credentials.cjs && node .infra/fix-credentials.cjs"
   },
   "engines": {
     "node": ">=20.0.0",
@@ -65,67 +66,52 @@
       "prettier --write"
     ]
   },
-  "prisma": {
-    "seed": "npx tsx prisma/seed.ts"
-  },
   "dependencies": {
     "@anpdgovbr/shared-types": "^0.1.4-beta",
-    "@azure/msal-node": "^3.6.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.2.1",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
-    "@mui/x-data-grid": "^8.9.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-data-grid": "^8.10.0",
     "@prisma/client": "^6.13.0",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
-    "multer": "^2.0.2",
-    "next": "^15.4.4",
+    "next": "^15.4.6",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.61.1",
-    "react-input-mask": "^2.0.4",
-    "recharts": "^3.1.0",
+    "react-hook-form": "^7.62.0",
+    "recharts": "^3.1.2",
     "remask": "^1.2.2",
-    "sass": "^1.89.2",
-    "swr": "^2.3.4",
-    "text-mask-addons": "^3.8.0",
+    "sass": "^1.90.0",
+    "swr": "^2.3.6",
     "tsx": "^4.20.3",
-    "yup": "^1.6.1"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.4.4",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@eslint/js": "^9.33.0",
+    "@next/eslint-plugin-next": "^15.4.6",
     "@types/lodash": "^4.17.20",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^24.1.0",
-    "@types/node-fetch": "^2.6.12",
+    "@types/node": "^24.2.1",
+    "@types/node-fetch": "^2.6.13",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-input-mask": "^3.0.6",
-    "@types/react-text-mask": "^5.4.14",
-    "@types/text-mask-addons": "^3.8.4",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "cross-env": "^10.0.0",
-    "eslint": "^9.32.0",
-    "eslint-config-next": "^15.4.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.3",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "postcss": "^8.5.6",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "prisma": "^6.13.0",
-    "purgecss": "^7.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
