--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "bump:minor": "node scripts/bump-version-advanced.cjs minor",
     "bump:major": "node scripts/bump-version-advanced.cjs major",
     "db:seed": "npx tsx prisma/seed.ts",
-    "dev": "npm run build-routes && next dev --turbopack",
-    "dev:https": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
-    "devs": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
+    "dev": "npm run prebuild && next dev --turbopack",
+    "dev:https": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/dev-server.mjs",
+    "devs": "npm run prebuild && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node server.js",
     "format": "prettier --write \"**/*.{ts,tsx,css,json}\"",
     "generate:version": "node scripts/generate-version.cjs",
     "lint": "npx eslint \"**/*.{ts,tsx}\" --fix",
@@ -28,10 +28,6 @@
     "prisma:studio": "npx prisma studio",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "fix:mui-imports": "node scripts/fix-mui-imports.mjs",
-    "fix:mui-imports:dry": "node scripts/fix-mui-imports.mjs --dry-run",
-    "fix:mui-imports:advanced": "node scripts/fix-mui-imports-advanced.mjs",
-    "fix:mui-imports:advanced:dry": "node scripts/fix-mui-imports-advanced.mjs --dry-run",
     "infra:setup": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs",
     "infra:setup:manual": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --manual",
     "infra:setup:force": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --force --auto",
