chore: add CODEOWNERS to .prettierignore and update CODEOWNERS format

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,7 +4,8 @@
 
 # Proprietários gerais de todo o código
 
-- @anpdgovbr/backlog-lgpd-team @anpdgovbr/cgti-admin @anpdgovbr/cis-team @anpdgovbr/ddss-team
+* @anpdgovbr/backlog-lgpd-team @anpdgovbr/cgti-admin @anpdgovbr/cis-team @anpdgovbr/ddss-team
+
 
 # Código-fonte principal
 
