--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,12 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule: { interval: "weekly" }
+    ignore:
+      - dependency-name: "*"
+      - update-types: ["version-update:semver-major"]
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule: { interval: "weekly" }
+    ignore:
+      - dependency-name: "*"
+      - update-types: ["version-update:semver-major"]
